Replace deprecated new URL constructors in appserv-tests web devtests (batch 6)
Refs #25625

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>