@@ -76,8 +76,8 @@ public class WebTest {
      * that file.
      */
     public void firstRun() throws Exception {
-        URL url = new URL("http://" + host  + ":" + port + contextRoot +
-                          "/TestServlet");
+        URL url = URI.create("http://" + host  + ":" + port + contextRoot +
+                          "/TestServlet").toURL();
         System.out.println("Connecting to: " + url.toString());
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
         conn.setInstanceFollowRedirects(false);
