@@ -68,8 +68,8 @@ public class WebTest {
 
     public void doTest() throws Exception {
 
-        URL url = new URL("http://" + host  + ":" + port
-            + contextRoot + "/test.jsp;jsessionid=12;jsessionwhatever=456");
+        URL url = URI.create("http://" + host  + ":" + port
+            + contextRoot + "/test.jsp;jsessionid=12;jsessionwhatever=456").toURL();
         System.out.println("Connecting to: " + url.toString());
 
         HttpURLConnection conn = (HttpURLConnection) url.openConnection();
